--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,12 +10,12 @@ body
 }
 #cabecera
 {
-background: url("..imagenes/UCHI.png") no-repeat center center cover;
+background: #37488b;
 box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
 color: white;
 font-weight: bold;
 margin: 0;
-padding: 0.5em 0 0.5em 2em;
+padding: 0.5em;
 }
 #cabecera #logo
 {
@@ -46,5 +46,5 @@ padding: 0.5em 0 0.5em 2em;
 #post
 {
     background: white;
-    padding: 1em;
+    padding: 1em; 
 }
