--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,5 @@
 body
 {
-    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -10,30 +9,24 @@ body
 }
 #cabecera
 {
-background: #37488b;
+background: #33A;
 box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-color: #fff;
-font-weight: 700;
+color: white;
+font-weight: bold;
 margin: 0;
 padding: 0.5em;
 }
-#cabecera #logo
-{
-    width: 20px;
-    vertical-align: middle;
-}
-
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 0.8em;
-}|
+}
 
 #container
 {
     width: 70%;
-    padding: 0;
+    padding: 1em;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -41,10 +34,4 @@ padding: 0.5em;
 #container h1
 {
     font-size: 20px;
-}
-
-#post
-{
-    background: #fff;
-    padding: 1em; 
 }
