--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,3 +35,16 @@ padding: 0.5em;
 {
     font-size: 20xp;
 }
+
+#post
+{
+    padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
