--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ font-weight: bold;
 margin: 0;
 padding: 0.5em;
 }
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -26,14 +27,14 @@ padding: 0.5em;
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 #container h1
 {
-    font-size: 20xp;
+    font-size: 20px;
 }
 
 #post
